[gd_scene load_steps=7 format=2]

[ext_resource path="res://project/assets/fonts/Creepster-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://project/src/TitleScreen.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 25
extra_spacing_char = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 1 )

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 704.0
color = Color( 0.0431373, 0.0666667, 0.027451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 161.516
margin_top = 163.172
margin_right = 475.516
margin_bottom = 332.172
custom_fonts/font = SubResource( 1 )
text = "The Climb
to Daylight"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="MarginContainer" parent="."]
margin_left = 239.941
margin_top = 441.805
margin_right = 392.941
margin_bottom = 517.805
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Buttons"]
margin_right = 153.0
margin_bottom = 76.0

[node name="StartButton" type="Button" parent="Buttons/HBoxContainer"]
margin_left = 41.0
margin_right = 111.0
margin_bottom = 36.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "Start"

[node name="InstructionsButton" type="Button" parent="Buttons/HBoxContainer"]
margin_top = 40.0
margin_right = 153.0
margin_bottom = 76.0
custom_fonts/font = SubResource( 3 )
text = "Instructions"

[node name="InstructionsPopup" type="Popup" parent="."]
margin_left = 205.565
margin_top = 212.24
margin_right = 245.565
margin_bottom = 252.24

[node name="PopupBackground" type="ColorRect" parent="InstructionsPopup"]
margin_left = -10.0
margin_top = -10.0
margin_right = 237.0
margin_bottom = 202.0
color = Color( 0.12549, 0.121569, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsLabel" type="Label" parent="InstructionsPopup"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 4 )
text = "Instructions:
Left/Right to move
Up to jump

Get to the top!"
align = 1
[connection signal="pressed" from="Buttons/HBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="Buttons/HBoxContainer/InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
